"dodana logika ogania, jeszcze nie wywołuje"